Added card to inventory list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">FWInventory</string>
+    <string name="edit_inventory_title">Edit Inventory Item</string>
+    <string name="back">Back</string>
+    <string name="delete_item">Delete Item</string>
+    <string name="name">Item Name</string>
+    <string name="name_required_error">Name is required</string>
+    <string name="name_unique_error">Name must be unique</string>
+    <string name="total_stock">Total Stock</string>
+    <string name="total_stock_number_error">Total stock must be a number</string>
+    <string name="price">Price</string>
+    <string name="price_number_error">Price must be a number</string>
+    <string name="description">Description</string>
+    <string name="description_words_error">Description must have at least three words</string>
+    <string name="update_item">Update Item</string>
+    <string name="confirm_delete_title">Delete Item</string>
+    <string name="confirm_delete_message">Are you sure you want to delete this item?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="add_inventory_title">Add Inventory Item</string>
+    <string name="item_name">Item Name</string>
+    <string name="add_item">Add Item</string>
 </resources>
